some fix for the index not align problem

--- a/yeinsight.com/css/all.css
+++ b/yeinsight.com/css/all.css
@@ -1183,7 +1183,7 @@ a:hover .icon.ico6{background:url(../images/ico6-hover.png) no-repeat;}
 }
 .portfolio-box h5 {margin:0 0 11px;}
 .main-container {
-    padding:20px 19px 15px 0;
+    padding:20px 0 15px 0;
     font:300 "Oxygen", Arial, Helvetica, sans-serif;
 }
 
@@ -1235,7 +1235,6 @@ a:hover .icon.ico6{background:url(../images/ico6-hover.png) no-repeat;}
     background:url(../images/map_flag.png) no-repeat ;
     width: 100%;
     overflow:hidden;
-    padding: 0 30px 0 30px;
     height:300px;
     background-position: center -130px;
     margin-bottom: 0;
@@ -1252,6 +1251,7 @@ a:hover .icon.ico6{background:url(../images/ico6-hover.png) no-repeat;}
 
 
 
+
 .dark{
     padding: 10px 0 20px 0;
     background: #f1f1f1;
@@ -1262,14 +1262,6 @@ a:hover .icon.ico6{background:url(../images/ico6-hover.png) no-repeat;}
 .dark .counters {
     padding:50px 0 30px 0;
 }
-
-/*
-
-.main-container table tr.tr-dark {
-    background-color: #000;
-}
-
-*/
 
 
 
